# configfactory

./: .bumpversion.cfg  .env.example  .gitignore  Makefile  alembic.ini  app.py  manage.py  pyproject.toml  pytest.ini
configfactory/: __main__.py  asgi.py  cli.py  conf.py  exceptions.py  main.py  models.py  urls.py  views.py  wsgi.py
configfactory/api/: main.py  router.py  urls.py  views.py
configfactory/cli/: __init__.py  commands.py  decorators.py
configfactory/conf/: settings.py  urls.py
configfactory/db/: __init__.py  main.py  schema.py
configfactory/dto/: environment.py
configfactory/locale/en/LC_MESSAGES/: django.po
configfactory/management/commands/: configfactory.py
configfactory/repositories/: __init__.py  base.py  environment.py  user.py
configfactory/routers/: environment.py
configfactory/services/: component.py  environment.py  project.py  user.py
configfactory/utils/: dependencies.py
migrations/: env.py
migrations/versions/: 20200711145834_b906fb864a32_create_environment_table.py  20200711163013_a02cb4ac6298_initial_migration.py
src/configfactory/: cli.py
src/configfactory/conf/: dirs.py  settings.py
src/configfactory/locale/en/LC_MESSAGES/: django.po
src/configfactory/management/commands/: configfactory.py
src/configfactory/models/: __init__.py  enviornment.py
src/configfactory/templates/configfactory/: index.html
tests/unit/: junit.xml
