[tool.poetry]
name = "configfactory"
version = "0.1.0"
description = ""
authors = ["Anton Ruhlov <antonruhlov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-environ = "^0.4.5"
psycopg2 = {version = "^2.8.5", extras = ["postgres"]}
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
isort = "^5.0.7"
mypy = "^0.782"
black = "^19.10b0"
flake8 = "^3.8.3"
pytest = "^5.4.3"
bump2version = "^1.0.0"

[tool.poetry.scripts]
configfactory = "configfactory.cli:main"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
